[gd_scene load_steps=12 format=3 uid="uid://d0ausrmh8y0is"]

[ext_resource type="Theme" uid="uid://bhs76hnulf3s4" path="res://assets/misc/main_theme.tres" id="1_5mrf3"]
[ext_resource type="Script" path="res://scences/ui/player_card/card_ui/cardui.gd" id="2_6d5p7"]
[ext_resource type="StyleBox" uid="uid://ck3105wj7dcrn" path="res://assets/styleboxes/default_stylebox.tres" id="3_postk"]
[ext_resource type="Script" path="res://scences/ui/player_card/card_ui/card_states/card_state_machine.gd" id="5_xwwc7"]
[ext_resource type="Script" path="res://scences/ui/player_card/card_ui/card_states/card_base_state.gd" id="6_2787a"]
[ext_resource type="Script" path="res://scences/ui/player_card/card_ui/card_states/card_clicked_state.gd" id="7_6dbei"]
[ext_resource type="Script" path="res://scences/ui/player_card/card_ui/card_states/card_dragging_state.gd" id="8_8kosp"]
[ext_resource type="Script" path="res://scences/ui/player_card/card_ui/card_states/card_released_state.gd" id="9_whhhk"]
[ext_resource type="Script" path="res://scences/ui/player_card/card_ui/card_states/card_aiming_state.gd" id="10_5856o"]

[sub_resource type="LabelSettings" id="LabelSettings_fardj"]
line_spacing = 0.0
font_size = 12

[sub_resource type="RectangleShape2D" id="RectangleShape2D_245v2"]
size = Vector2(45, 57)

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(85, 100)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 50.0
scale = Vector2(2, 2)
theme = ExtResource("1_5mrf3")
script = ExtResource("2_6d5p7")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5.0
offset_bottom = 6.6
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("3_postk")

[node name="Name" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 2.5
offset_right = 4.0
offset_bottom = -18.9
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 6
text = "hiya"
label_settings = SubResource("LabelSettings_fardj")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Cost" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 14.5
offset_right = 50.0
offset_bottom = 26.5
text = "2"
vertical_alignment = 1

[node name="Type" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 14.5
offset_right = 50.0
offset_bottom = 26.5
text = "2"
vertical_alignment = 1

[node name="Desc" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 30.0
offset_right = 5.0
offset_bottom = 21.6
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
bbcode_enabled = true
text = "[center]Attack 3
Draw 12"

[node name="CardStatuses" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -45.9
offset_right = 2.0
offset_bottom = 4.1
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="DropPointDetector" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
visible = false
position = Vector2(22.5, 28.5)
shape = SubResource("RectangleShape2D_245v2")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("inital_state")]
unique_name_in_owner = true
script = ExtResource("5_xwwc7")
inital_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("6_2787a")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_6dbei")
state = 1

[node name="CardDraggingState" type="Node" parent="CardStateMachine"]
script = ExtResource("8_8kosp")
state = 2

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("9_whhhk")
state = 4

[node name="CardAimingState" type="Node" parent="CardStateMachine"]
script = ExtResource("10_5856o")
state = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="DropPointDetector" to="." method="_on_drop_point_detector_area_entered"]
[connection signal="area_exited" from="DropPointDetector" to="." method="_on_drop_point_detector_area_exited"]
